# wasmedge_plugin_rust_sdk

./: Cargo.toml  README.md
examples/embedded_demo/: Cargo.toml
examples/embedded_demo/src/: main.rs
examples/plugin/hello_plugin/: Cargo.toml
examples/plugin/hello_plugin/src/: lib.rs
examples/plugin/kotlin_demo/: Cargo.toml
examples/plugin/kotlin_demo/src/: lib.rs
examples/plugin/memory_access_plugin/: Cargo.toml
examples/plugin/memory_access_plugin/src/: lib.rs
examples/plugin/stateful_plugin/: Cargo.toml
examples/plugin/stateful_plugin/src/: lib.rs
examples/plugin2_demo/: Cargo.toml
examples/plugin2_demo/src/: lib.rs
examples/plugin_demo/: Cargo.toml
examples/plugin_demo/src/: lib.rs
examples/wasm/call_memory_access/: Cargo.toml
examples/wasm/call_memory_access/src/: main.rs
examples/wasm/call_stateful_plugin/: Cargo.toml
examples/wasm/call_stateful_plugin/src/: main.rs
examples/wasm/hello_world/src/: main.rs
src/: error.rs  lib.rs
src/core/: config.rs  mod.rs  module.rs  types.rs
src/core/instance/: function.rs  memory.rs
src/sdk/: mod.rs  plugin.rs
wasm/call_by_host/: Cargo.toml
wasm/call_by_host/src/: main.rs
wasm/call_plugin/: Cargo.toml
wasm/call_plugin/.cargo/: config.toml
wasm/call_plugin/src/: main.rs
wasm/hello_wasi/: Cargo.toml
wasmedge_plugin_sdk/: Cargo.toml
wasmedge_plugin_sdk/src/: lib.rs  utils.rs
wasmedge_plugin_sdk/src/core/: ast_module.rs  config.rs  executor.rs  module.rs  types.rs
wasmedge_plugin_sdk/src/core/instance/: function.rs  memory.rs  mod.rs
wasmedge_plugin_sdk/src/sdk/: mod.rs  module.rs  plugin.rs
wasmedge_sdk/: Cargo.toml
wasmedge_sdk/src/: lib.rs  utils.rs
wasmedge_sdk/src/core/: mod.rs
wasmedge_sdk/src/core/instance/: global.rs
wasmedge_sdk/src/sdk/: mod.rs  module.rs  store.rs
wasmedge_sys_ffi/: Cargo.toml  build.rs
wasmedge_sys_ffi/src/: ffi.rs  lib.rs
