[package]
name = "wasmedge_plugin_sdk"
version = "0.1.0"
edition = "2021"
description = """
Create WasmEdge plugins using Rust.
"""
license = "Apache-2.0"
repository = "https://github.com/second-state/wasmedge_plugin_rust_sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
wasmedge_sys_ffi = { path = "../wasmedge_sys_ffi" }

[features]
default = ["plugin", "wasm_ref"]
wasi = []
embedded = ["wasi"]
plugin = []
wasm_ref = []
