[package]
name = "wasmedge_sys_ffi"
version = "0.11.2"
edition = "2021"
description = """
An FFI crate for creating WasmEdge plugins.
"""
license = "MIT/Apache-2.0"
repository = "https://github.com/second-state/wasmedge_plugin_rust_sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
